--- a/index.html
+++ b/index.html
@@ -108,5 +108,41 @@
         </div>
         </div>
     </section>
+    <!--Footer-->
+    <footer id="main-footer" class="py-2">
+        <div class="container footer-container">
+            <div>
+                <img src="img/logo_light.png" alt="">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure quis facilis ex velit numquam consequatur excepturi vel laboriosam tempore consequuntur.</p>
+            </div>
+            <div>
+                <h3>Email Newsletter</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                <form>
+                    <input type="email" placeholder="Enter Email">
+                    <input type="submit" value="Subscribe" class="btn btn-primary">
+                </form>
+            </div>
+            <div>
+                <h3>Site Links</h3>
+                <ul class="list">
+                    <li><a href="#">Help & Support</a></li>
+                    <li><a href="#">Privacy Policy</a></li>
+                    <li><a href="#">About Us</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </div>
+            <div>
+                <h2>Join Our Club</h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Odit, doloremque?</p>
+                <a href="" class="btn btn-secondary">Join Now</a>
+            </div>
+            <div>
+                <p>
+                    Copyright &copy; 2023, All Rights Reserved
+                </p>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
